Bug 1581193 - Fix devicechange event on Windows; r=achronop a=lizzard

This restores the code for generating devicechange events that was
accidentally removed as part of updating the Windows video capture code
in Bug 1552755.

Differential Revision: https://phabricator.services.mozilla.com/D46033

--HG--
extra : source : 840c4edafa021eeac6a7e6ae0e828d0adcfea92e